--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,67 @@
-version: "3"
-
+version: '3'
 services:
 
-  # Web server
+  #PHP Service
+  app:
+    container_name: todo_app
+    build:
+      context: ./docker
+      dockerfile: app.dockerfile
+    working_dir: /var/www
+    volumes:
+            - ./:/var/www
+    restart: unless-stopped
+    tty: true
+    networks:
+      - todo-network
+  #Web Server(NGINX)
   web:
-    build: .
-    container_name: todolist-web
-    ports:
-      - "80:80"
+    container_name: todo_web
+    build:
+        context: ./docker
+        dockerfile: web.dockerfile
+    working_dir: /var/www
     volumes:
-      - ./application:/var/www/html
+        - ./:/var/www
+    ports:
+        - 8010:80
+    networks:
+      - todo-network
 
-  # Database
+  #MySQL Service
   db:
-    image: mysql:latest
-    container_name: todolist-db
+    container_name: todo_db
+    image: mariadb
+    restart: unless-stopped
+    tty: true
+    # ports:
+    #   - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: todolist
+      MYSQL_DATABASE: todo
+      MYSQL_USERNAME: todo
+      MYSQL_PASSWORD: todo
+      MYSQL_ROOT_PASSWORD: todo
     volumes:
-      - ./db-data:/var/lib/mysql
+      - ./dbdata1:/var/lib/mysql/
+      # - ./mysql/my.cnf:/etc/mysql/my.cnf
+    networks:
+      - todo-network
 
-  # phpMyAdmin
   phpmyadmin:
-    image: phpmyadmin:latest
-    container_name: todolist-phpmyadmin
+    container_name: todo_pma
+    image: phpmyadmin
+    restart: always
     ports:
-      - "8080:80"
+      - 8090:80
     environment:
-      PMA_HOST: todolist-db
-      PMA_USER: root
-      PMA_PASSWORD: root
-
+      - PMA_ARBITRARY=1
+      - PMA_HOST=todo_db
+      - PMA_USER=root
+      - PMA_PASSWORD=todo
+      - MAX_EXECUTION_TIME=3600
+      - UPLOAD_LIMIT=512M
+    networks:
+      - todo-network
 networks:
-  default:
-    name: todolist-network
+  todo-network:
+    driver: bridge
